Refactor file/gallery UI and AppState fixes
Major refactor improving file & gallery UX and stabilizing AppState logic.

Key changes:
- AndroidManifest: add <queries> entry to handle PDF VIEW intents.
- assets/lang.json: add many localization keys for UI strings.
- app_state.dart: unify prefs access, use Sets for selection to preserve order, add updateSettings, selectAll helpers, preserve original timestamps when saving edited images, evict image cache, maintain pinned PDF state correctly, ensure notifyListeners() calls and await SharedPreferences where needed, and make PDF generation iterate selection order.
- files_screen.dart & gallery_screen.dart: rebuilt file and gallery UIs with animated app bars, selection mode toolbars, improved dialogs/bottom sheets, rename/share/delete/edit flows, responsive grid/list layouts, selection indices, metadata pills and better visuals/UX interactions (haptics, snackbars, themed styles).
- Full-screen image viewer: improved editor save flow (saves and refreshes image without blocking), drag-to-dismiss behavior, UI toggle, and other polish.
- pubspec.yaml / pubspec.lock and release APK updated (binary change).

Overall this commit focuses on UX polish, bug fixes around saving/renaming/pinning files, selection behavior, and localization additions.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- ADD THESE 4 LINES FOR CAMERA & GALLERY -->
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:mimeType="application/pdf" />
+        </intent>
+    </queries>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-feature android:name="android.hardware.camera" android:required="false" />
     <uses-permission android:name="android.permission.CAMERA" />
