--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   file_picker: ^10.3.10
   syncfusion_flutter_pdf: ^32.2.5
   printing: ^5.14.2
+  path: ^1.9.1
+  open_filex: ^4.7.0
 
 dev_dependencies:
   flutter_test:
