--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   printing: ^5.14.2
   path: ^1.9.1
   open_filex: ^4.7.0
+  lottie: ^3.1.2
+  flutter_staggered_animations: ^1.0.0
+  reorderable_grid_view: ^2.0.0
+  intl: ^0.20.2
+  google_mlkit_text_recognition: ^0.15.1
 
 dev_dependencies:
   flutter_test:
